--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,22 @@
-*.class
+# Eclipse
+.settings/
+.classpath
+.project
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Intellij
+.idea/
+*.iml
+*.iws
 
-# Package Files #
-*.jar
-*.war
-*.ear
+# NetBeans
+nb*.xml
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Sublime
+*.sublime-project
+*.sublime-workspace
+
+# Mac
+.DS_Store
+
+# Maven
+target/
