--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>commons</artifactId>
 
   <!-- Only change this on a master or release branch -->
-  <version>develop-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <name>MultiBit Commons</name>
   <description>Classes and libraries to support MultiBit projects</description>
