--- a/pom.xml
+++ b/pom.xml
@@ -185,7 +185,7 @@
     <dependency>
       <groupId>org.bitcoinj</groupId>
       <artifactId>bitcoinj-core</artifactId>
-      <version>0.13-SNAPSHOT-alice-0.1.0</version>
+      <version>0.13.2-alice-0.1.3</version>
     </dependency>
 
     <!-- Spongy Castle for PGP support -->
